--- a/services/app/templates/zone.html
+++ b/services/app/templates/zone.html
@@ -4,12 +4,12 @@
             <div class="ui vertical pointing secondary menu">
                 <a class="item active" data-tab="dashboard"><i class="ion-ios-speedometer-outline icon large"></i> Tổng quan</a>
                 <a class="item" data-tab="data"><i class="ion-ios-analytics-outline icon large"></i> Dữ liệu</a>
-<!--                 <a class="item" data-tab="staffs"><i class="ion-ios-people-outline icon large"></i> Nhân sự</a> -->
                 <a class="item" data-tab="notifications"><i class="ion-ios-bell-outline icon large"></i> Cảnh báo</a>
                 <!-- <a class="item" data-tab="settings"><i class="ion-ios-gear-outline icon large"></i> Thiết lập</a> -->
                 <a class="item" data-tab="controlls"><i class="ion-ios-game-controller-b-outline icon large"></i> Điều khiển</a>
                 <a class="item" data-tab="images"><i class="ion-ios-camera-outline icon large"></i> Hình ảnh</a>
-<!--                 <a class="item" data-tab="materials" ng-click="vm.getProjectsFinances()"><i class="ion-social-usd-outline icon large"></i> Tài chính/ Vật tư</a> -->
+                <a class="item" data-tab="staffs"><i class="ion-ios-people-outline icon large"></i> Nhân sự</a>
+                <a class="item" data-tab="materials" ng-click="vm.getProjectsFinances()"><i class="ion-social-usd-outline icon large"></i> Tài chính/ Vật tư</a>
             </div>
         </div>
         <div class="thirteen wide computer ten wide tablet column">
@@ -50,13 +50,13 @@
                                         <div class="header">61 người</div>
                                     </div>
                                 </div>
-                                <div class="item">
+<!--                                 <div class="item">
                                     <i class="large ion-ios-stopwatch-outline middle aligned icon"></i>
                                     <div class="content">
                                         <div class="description">Chu kỳ tưới</div>
                                         <div class="header">2 ngày 1 lần, vào lúc 9:00 sáng</div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -100,43 +100,7 @@
                   </div>
                   <div class="row">
                     <div class="five wide computer sixteen wide tablet column">
-                      <!-- <h4 class="ui header">
-                          <i class="ion-ios-game-controller-b-outline icon"></i>
-                          <div class="content">Điều khiển</div>
-                      </h4>
-
-                      <div class="ui segments dmt box">
-                          <div class="ui segment">
-                              <div class="ui toggle checkbox">
-                                <input type="checkbox" name="public" checked="checked">
-                                <label>Đèn</label>
-                              </div>
-                          </div>
-                          <div class="ui segment">
-                              <div class="ui toggle checkbox">
-                                <input type="checkbox" name="public">
-                                <label>Lưới cắt nắng</label>
-                              </div>
-                          </div>
-                          <div class="ui segment">
-                              <div class="ui toggle checkbox">
-                                <input type="checkbox" name="public">
-                                <label>Phun sương</label>
-                              </div>
-                          </div>
-                          <div class="ui segment">
-                              <div class="ui toggle checkbox">
-                                <input type="checkbox" name="public">
-                                <label>Tưới</label>
-                              </div>
-                          </div>
-                          <div class="ui segment">
-                              <div class="ui toggle checkbox">
-                                <input type="checkbox" name="public">
-                                <label>Châm phân</label>
-                              </div>
-                          </div>
-                      </div> -->
+                      
                     </div>
                     <div class="eleven wide computer sixteen wide tablet column">
                       <h4 class="ui header">
@@ -210,7 +174,7 @@
                 </div>
             </div>
 
-<!--             <div class="ui tab" data-tab="staffs">
+            <div class="ui tab" data-tab="staffs">
                 <h4 class="ui header">
                     <i class="ion-ios-people-outline icon"></i>
                     <div class="content">Nhân sự</div>
@@ -386,7 +350,7 @@
                     </table>
                 </div>
 
-            </div> -->
+            </div>
             <div class="ui tab" data-tab="notifications">
                 <h4 class="ui header">
                     <i class="ion-ios-bell-outline icon"></i>
@@ -643,6 +607,30 @@
                               <label>DEVICE 4</label>
                             </div>
                         </div>
+                        <div class="ui segment">
+                            <div class="ui toggle checkbox">
+                              <input type="checkbox" name="controller5" ng-change="vm.sendCmd(5, vm.controller5)" ng-model="vm.controller5">
+                              <label>DEVICE 5</label>
+                            </div>
+                        </div>
+                        <div class="ui segment">
+                            <div class="ui toggle checkbox">
+                              <input type="checkbox" name="controller6" ng-change="vm.sendCmd(6, vm.controller6)" ng-model="vm.controller6">
+                              <label>DEVICE 6</label>
+                            </div>
+                        </div>
+                        <div class="ui segment">
+                            <div class="ui toggle checkbox">
+                              <input type="checkbox" name="controller7" ng-change="vm.sendCmd(7, vm.controller7)" ng-model="vm.controller7">
+                              <label>DEVICE 7</label>
+                            </div>
+                        </div>
+                        <div class="ui segment">
+                            <div class="ui toggle checkbox">
+                              <input type="checkbox" name="controller8" ng-change="vm.sendCmd(8, vm.controller8)" ng-model="vm.controller8">
+                              <label>DEVICE 8</label>
+                            </div>
+                        </div>
 
                         <div class="online-status">
                           <div class="online" ng-show="vm.online">
@@ -712,7 +700,7 @@
                     </div>
                 </div>
             </div>
-<!--             <div class="ui tab materials" data-tab="materials">
+            <div class="ui tab materials" data-tab="materials">
                 <h4 class="ui header">
                     <i class="ion-social-usd-outline icon"></i>
                     <div class="content">Tài chính</div>
@@ -762,8 +750,8 @@
                           <th class="wide">Tháng 8</th>
                           <th class="wide">Tháng 9</th>
                           <th class="wide">o/o</th>
-                          <th class="wide">2014</th>
                           <th class="wide">2015</th>
+                          <th class="wide">2016</th>
                           <th class="wide">o/o</th>
                         </tr>
                       </thead>
@@ -806,7 +794,7 @@
                           <th class="wide">Tháng 8</th>
                           <th class="wide">Tháng 9</th>
                           <th class="wide">%</th>
-                          <th class="wide">2014</th>
+                          <th class="wide">2016</th>
                           <th class="wide">Trung bình năm</th>
                           <th class="wide">%</th>
                         </tr>
@@ -842,7 +830,7 @@
                       </tbody>
                     </table>
                 </div>
-            </div> -->
+            </div>
 
         </div>
     </div>
