--- a/services/app/templates/zone.html
+++ b/services/app/templates/zone.html
@@ -659,24 +659,26 @@
                 </div>
             </div>
             <div class="ui tab" data-tab="images">
-                <!-- <h4 class="ui header">
-                    <i class="ion-ios-camera-outline icon"></i>
-                    <div class="content">Hình ảnh</div>
-                </h4>
-                <div class="ui four doubling grid cards">
-                  <div class="card" ng-repeat="data in vm.data.images">
-                    <div class="image">
-                      <img src="data/images/rau/{{data.image}}">
+                <div class="" ng-show="vm.data.zone.id==111">
+                    <h4 class="ui header">
+                        <i class="ion-ios-camera-outline icon"></i>
+                        <div class="content">Hình ảnh</div>
+                    </h4>
+                    <div class="ui four doubling grid cards">
+                      <div class="card" ng-repeat="data in vm.data.images">
+                        <div class="image">
+                          <img src="data/images/rau/{{data.image}}">
+                        </div>
+                        <div class="ui teal right top attached label">
+                          Ngày {{$index + 1}}
+                        </div>
+                        <div class="extra">
+                          <p>cao  <b>{{data.h}}cm</b></p>
+                          <p>rộng <b>{{data.w}}cm</b></p>
+                        </div>
+                      </div>
                     </div>
-                    <div class="ui teal right top attached label">
-                      Ngày {{$index + 1}}
-                    </div>
-                    <div class="extra">
-                      <p>cao  <b>{{data.h}}cm</b></p>
-                      <p>rộng <b>{{data.w}}cm</b></p>
-                    </div>
-                  </div>
-                </div> -->
+                </div>
 
                 <h4 class="ui header">
                     <i class="ion-ios-videocam-outline icon"></i>
@@ -685,19 +687,25 @@
 
                 <div class="ui grid stackable">
                     <div class="eight wide computer column" ng-show="vm.data.zone.id==111">
-                        <img class="camera" src="http://cdfgreenhouse.asuscomm.com:50000/CGIProxy.fcgi?cmd=snapPicture2&usr=user&pwd=caudatfarm&t=" 
+                        <img class="" src="http://cdfgreenhouse.asuscomm.com:50000/CGIProxy.fcgi?cmd=snapPicture2&usr=user&pwd=caudatfarm&t=" 
+                        width='960' 
+                        height='540' 
                         onload='setTimeout(function() {src = src.substring(0, (src.lastIndexOf("t=")+2))+(new Date()).getTime()}, 10)' 
                         onerror='setTimeout(function() {src = src.substring(0, (src.lastIndexOf("t=")+2))+(new Date()).getTime()}, 100)' 
                         alt='' />
                     </div>
                     <div class="eight wide computer column" ng-show="vm.data.zone.id==222">
-                        <img class="camera" src="http://cdfgreenhouse.asuscomm.com:50002/CGIProxy.fcgi?cmd=snapPicture2&usr=user&pwd=caudatfarm&t=" 
+                        <img class="" src="http://cdfgreenhouse.asuscomm.com:50002/CGIProxy.fcgi?cmd=snapPicture2&usr=user&pwd=caudatfarm&t=" 
+                        width='960' 
+                        height='540'
                         onload='setTimeout(function() {src = src.substring(0, (src.lastIndexOf("t=")+2))+(new Date()).getTime()}, 10)' 
                         onerror='setTimeout(function() {src = src.substring(0, (src.lastIndexOf("t=")+2))+(new Date()).getTime()}, 100)' 
                         alt='' />
                     </div>
                     <div class="eight wide computer column" ng-show="vm.data.zone.id==333">
-                        <img class="camera" src="http://cdfgreenhouse.asuscomm.com:50003/CGIProxy.fcgi?cmd=snapPicture2&usr=user&pwd=caudatfarm&t=" 
+                        <img class="" src="http://cdfgreenhouse.asuscomm.com:50003/CGIProxy.fcgi?cmd=snapPicture2&usr=user&pwd=caudatfarm&t=" 
+                        width='960' 
+                        height='540'
                         onload='setTimeout(function() {src = src.substring(0, (src.lastIndexOf("t=")+2))+(new Date()).getTime()}, 10)' 
                         onerror='setTimeout(function() {src = src.substring(0, (src.lastIndexOf("t=")+2))+(new Date()).getTime()}, 100)' 
                         alt='' />
