--- a/services/app/templates/login.html
+++ b/services/app/templates/login.html
@@ -4,7 +4,7 @@
             <h2 class="ui teal image header">
                 <div class="logo large"></div>
                 <div class="content">
-                    Đăng nhập
+                    Log In
                 </div>
             </h2>
             <form class="ui large form" ng-submit="vm.login()">
@@ -26,9 +26,9 @@
 
                 <div class="ui negative message" ng-show="vm.isError" ng-cloak>
                     <div class="header">
-                        Không thể đăng nhập!
+                        Login Error
                     </div>
-                    <p>Sai email hoặc mật khẩu đăng nhập.</p>
+                    <p>Username or password is wrong</p>
                 </div>
             </form>
 
