--- a/services/app/templates/register.html
+++ b/services/app/templates/register.html
@@ -4,7 +4,7 @@
             <h2 class="ui teal image header">
                 <img src="http://home.demeter.dev/img/logo.svg" class="image">
                 <div class="content">
-                    Đăng ký
+                    Register
                 </div>
             </h2>
             <form class="ui large form">
@@ -12,34 +12,34 @@
                     <div class="field">
                         <div class="ui left icon input">
                             <i class="user icon"></i>
-                            <input type="text" name="full_name" placeholder="Họ tên">
+                            <input type="text" name="full_name" placeholder="Fullname">
                         </div>
                     </div>
                     <div class="field">
                         <div class="ui left icon input">
                             <i class="mail icon"></i>
-                            <input type="text" name="email" placeholder="Địa chỉ email">
+                            <input type="text" name="email" placeholder="Email">
                         </div>
                     </div>
                     <div class="field">
                         <div class="ui left icon input">
                             <i class="phone icon"></i>
-                            <input type="text" name="phone" placeholder="Điện thoại">
+                            <input type="text" name="phone" placeholder="Phone">
                         </div>
                     </div>
                     <div class="field">
                         <div class="ui left icon input">
                             <i class="lock icon"></i>
-                            <input type="password" name="password" placeholder="Mật khẩu">
+                            <input type="password" name="password" placeholder="Password">
                         </div>
                     </div>
                     <div class="field">
                         <div class="ui left icon input">
                             <i class="lock icon"></i>
-                            <input type="password_repeat" name="password_repeat" placeholder="Lặp lại mật khẩu">
+                            <input type="password_repeat" name="password_repeat" placeholder="Reapeat your password">
                         </div>
                     </div>
-                    <div class="ui fluid large teal submit button">Đăng ký</div>
+                    <div class="ui fluid large teal submit button">Register</div>
                 </div>
 
                 <div class="ui error message"></div>
