--- a/services/app/templates/project.html
+++ b/services/app/templates/project.html
@@ -3,35 +3,35 @@
         <div class="eight wide column">
             <h4 class="ui header">
                 <i class="ion-ios-speedometer-outline icon"></i>
-                <div class="content">Thông tin chung</div>
+                <div class="content">Information</div>
             </h4>
             <div class="dmt box">
                 <div class="ui relaxed divided list">
                     <div class="item">
                         <i class="large ion-ios-location-outline middle aligned icon"></i>
                         <div class="content">
-                            <div class="description">Địa điểm</div>
-                            <div class="header">Cầu Đất, Lâm Đồng</div>
+                            <div class="description">Location</div>
+                            <div class="header">Cau Dat, Lam Dong</div>
                         </div>
                     </div>
                     <div class="item">
                         <i class="large ion-ios-people-outline middle aligned icon"></i>
                         <div class="content">
-                            <div class="description">Nhân công</div>
-                            <div class="header">150 người</div>
+                            <div class="description">Farmer</div>
+                            <div class="header">150 people</div>
                         </div>
                     </div>
                     <div class="item">
                         <i class="large ion-ios-keypad-outline middle aligned icon"></i>
                         <div class="content">
-                            <div class="description">Số lượng Zone</div>
-                            <div class="header">3 zone</div>
+                            <div class="description">Zones</div>
+                            <div class="header">3 zones</div>
                         </div>
                     </div>
                     <div class="item">
                         <i class="large ion-ios-crop middle aligned icon"></i>
                         <div class="content">
-                            <div class="description">Diện tích</div>
+                            <div class="description">Area</div>
                             <div class="header">220 ha</div>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
 
             <h4 class="ui header">
                 <i class="ion-ios-partlysunny-outline icon"></i>
-                <div class="content">Dự báo thời tiết</div>
+                <div class="content">Weather Forcast</div>
             </h4>
             <div class="dmt box weather">
                 <div class="ui list grid">
@@ -87,13 +87,13 @@
                         <div class="ui relaxed list grid stackable">
                             <div class="item column eight wide computer sixteen wide tablet">
                                 <div class="content">
-                                    <div class="description">{{zone.id == 999 ? 'Lần hái trước' : 'Ngày trồng' }}</div>
+                                    <div class="description">{{zone.id == 999 ? 'Last harvest' : 'Start day' }}</div>
                                     <div class="header">{{zone.start | date: 'dd/MM/yyyy'}}</div>
                                 </div>
                             </div>
                             <div class="item column eight wide computer sixteen wide tablet">
                                 <div class="content">
-                                    <div class="description">{{zone.id == 999 ? 'Lần hái tiếp theo' : 'Ngày dự kiến thu hoạch'}}</div>
+                                    <div class="description">{{zone.id == 999 ? 'Next harvest' : 'End day'}}</div>
                                     <div class="header">{{zone.end | date: 'dd/MM/yyyy'}}</div>
                                 </div>
                             </div>
@@ -101,7 +101,7 @@
                         <div class="extra">
                             <a href="{{url}}" class="ui right labeled icon button right floated positive">
                                 <i class="right arrow icon"></i>
-                                Chi tiết
+                                Detail
                             </a>
                         </div>
                     </div>
@@ -112,25 +112,25 @@
 
     <div class="ui dimmer modals page transition">
         <div class="ui standard small modal transition visible active scrolling">
-            <div class="header">Tạo dự án</div>
+            <div class="header">Create project</div>
             <div class="content">
                 <form class="ui form">
                     <div class="field">
-                        <label>Tên dự án</label>
+                        <label>Project name</label>
                         <input type="text" name="first-name" placeholder="Tên dự án">
                     </div>
                     <div class="field">
-                        <label>Địa chỉ</label>
+                        <label>Address</label>
                         <input type="text" name="last-name" placeholder="Địa chỉ">
                     </div>
                 </form>
             </div>
             <div class="actions">
                 <div class="ui negative button">
-                    Huỷ
+                    Cancel
                 </div>
                 <div class="ui positive right labeled icon button">
-                    Tạo
+                    Create
                     <i class="plus icon"></i>
                 </div>
             </div>
