--- a/services/app/templates/projects.html
+++ b/services/app/templates/projects.html
@@ -16,7 +16,7 @@
                     <div class="item">
                         <i class="large ion-ios-people-outline middle aligned icon"></i>
                         <div class="content">
-                            {{project.staffs}} nhân công
+                            {{project.staffs}} farmer
                         </div>
                     </div>
                     <div class="item">
@@ -29,7 +29,7 @@
 
                 <div class="extra">
                     <a href="{{url}}" class="ui right labeled icon button right floated positive">
-                        Chi tiết
+                        Detail
                         <i class="right chevron icon"></i>
                     </a>
                 </div>
@@ -39,15 +39,15 @@
 
     <div class="ui dimmer modals page transition">
         <div class="ui standard small modal transition visible active scrolling">
-            <div class="header">Tạo dự án</div>
+            <div class="header">Create Project</div>
             <div class="content">
                 <form class="ui form">
                     <div class="field">
-                        <label>Tên dự án</label>
+                        <label>Project name</label>
                         <input type="text" name="first-name" placeholder="Tên dự án">
                     </div>
                     <div class="field">
-                        <label>Địa chỉ</label>
+                        <label>Address</label>
                         <input type="text" name="last-name" placeholder="Địa chỉ">
                     </div>
                 </form>
